--- a/task_9.css
+++ b/task_9.css
@@ -21,7 +21,7 @@
 .logo > img {
     animation-name: example;
     animation-duration: 1.5s;
-    animation-iteration-count: infinite;
+    animation-iteration-count: 4;
     animation-direction: alternate-reverse;
 }
 
